<resources>
    <string name="app_name">ПСБ</string>
    <string name="service_connect">Подключение сервиса</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sms_note">На данный номер телефона поступит СМС-уведомление о постановке вас на учет в налоговой службе</string>
    <string name="region_activity">Регион деятельности</string>
    <string name="register">Зарегистрироваться</string>
    <string name="agree_with_agrrement">Я согласен(-а) <a href="">с условиями Договора</a></string>
    <string name="activity_variants">Виды деятельности</string>
    <string name="Moscow">Москва</string>
    <string name="Moscow_distr">Московская область</string>
    <string name="Kalug_dis">Калужская область</string>
    <string name="Tatarstan">Татарстан</string>
    <string name="choose_region">Выберете регион деятельности</string>
    <string name="connection_third_save_text">Сохранить</string>
    <string name="congratulations">Поздравляем!</string>
    <string name="congrats_text">Вы стали самозанятым. Наши сервисы помогут вам вести вашу деятельность не только легально, но и удобно.</string>
    <string name="thanks">Спасибо</string>
    <string name="flats_arenda_title">Сдача жилья в аренду</string>
    <string name="flats_arenda_list_title">Мои квартиры</string>
    <string name="flat">Квартира</string>
    <string name="card_number">•••• 1234</string>
    <string name="master_card">Mastercard</string>
    <string name="info">Инфо</string>
    <string name="payments">Платежи</string>
    <string name="card_for_you">Для вашей деятельности самозанятого создана виртуальная карта</string>
    <string name="flat_payments_next_payment">Следующий платеж</string>
    <string name="flat_payments_arendators_event">Съезд арендаторов</string>
    <string name="flat_payments_history_title">История платежей</string>
    <string name="renter">Арендодатор</string>
    <string name="fio">ФИО</string>
    <string name="passp">Паспортные данные</string>
    <string name="birth_date">Дата рождения</string>
    <string name="cost">Стоимость квратиры</string>
    <string name="state">Статус</string>
    <string name="leave_date">Дата освобождения</string>
    <string name="agrement">Договор</string>
    <string name="main_ndp_info_dolg_text">Задолженность по налогам</string>
    <string name="main_npd_info_new_sel">Новая продажа</string>
    <string name="main_npd_info_new_check">Выставить счет</string>
    <string name="main_npd_info_services_title">Тематические сервисы</string>
    <string name="main_npd_info_last_operations_title">Последние операции</string>
    <string name="main_npd_info_last_operations_see_all"><a href="">См.все</a></string>
    <string name="main_npd_info_service_arenda_text">Сдача жилья в аренду</string>
    <string name="main_npd_info_service_client_text">Клиентский сервис</string>
    <string name="agreement">Договор</string>
    <string name="add_flat">Добавление квартиры</string>
    <string name="city">Город</string>
    <string name="mandatory">*</string>
    <string name="address">Адрес</string>
    <string name="cost2">Стоимость аренды</string>
    <string name="date_leave">Дата освобождения</string>
    <string name="add">Добавить</string>
    <string name="rent">Арендуется</string>
    <string name="soon_free">Скоро освободится</string>
    <string name="free">Свободна</string>
    <string name="choose_status">Статус квартиры</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rent_text">Сдача жилья в аренду</string>
    <string name="standart_aggrement">Стандартный договор с электронной подписью</string>
    <string name="info_renters">Информация о моих квартирах и арендаторах</string>
    <string name="pay_card">Оплата картой для ваших арендаторов</string>
    <string name="connected">Подключен</string>
    <string name="go">перейти</string>
    <string name="not_connected">Не подключен</string>
    <string name="connect">Подключить</string>
    <string name="coming_soon2">Ожидается скоро…</string>
    <string name="give_bill">Выставлние счета</string>
    <string name="payer_name">Имя платильщика</string>
    <string name="payment_target">Назначение платежа</string>
    <string name="sum">Сумма</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="share_link">Поделитесь ссылкой</string>
    <string name="copy">Скопировать</string>
    <string name="share">Поделиться</string>
    <string name="close">Закрыть</string>
    <string name="edit_flat">Редактирование квартиры</string>
    <string name="edit">Редактировать</string>
    <integer name="com_vk_sdk_AppId">7150159</integer>
</resources>
