<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:src="@drawable/invalid_name"
            />

        <TextView
            android:text="@string/congratulations"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/black2"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:text="@string/congrats_text"
            android:gravity="center"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:textColor="@color/black2"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            android:text="@string/card_for_you"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/mastercard_2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black2"
                android:text="@string/master_card"
                />

            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/black2"
                android:gravity="end"
                android:text="@string/card_number"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="34dp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:textColor="@android:color/white"
            android:text="@string/thanks"
            android:background="@drawable/bg_vk_auth_button"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>