<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginHorizontal="43dp"
            android:textSize="20sp"
            android:textColor="@color/black2"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_link"
            />

        <TextView
            android:id="@+id/link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            android:text="https://payment.psbank.ru/fd32r3"
            />

        <ImageView
            android:id="@+id/barcode"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/copy_btn"
            android:layout_marginTop="30dp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:text="@string/copy"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_share_button"/>

        <Button
            android:id="@+id/share_btn"
            android:layout_marginTop="15dp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:text="@string/share"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_vk_auth_button"/>

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="15dp"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/close"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>